# ShiziOS

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  README_CN.md  linker.ld
config/: CONFIG  ShiziOS.json  config.h
disk/: mkbootimg
docs/: LOCKING.md  LOCKING_CN.md
kernel/: kernel.c
kernel/arch/x86_64/: CMakeLists.txt  kernel.asm
kernel/arch/x86_64/cpu/: gdt.h  init.c  tss.h
kernel/arch/x86_64/drivers/: io.c  io.h  serial.c  serial.h
kernel/arch/x86_64/mm/: CMakeLists.txt
kernel/arch/x86_64/mm/bootmem/: bootmem.h  linear_map.c  linear_map.h
kernel/drivers/: CMakeLists.txt
kernel/include/: bootboot.h  kernel.h  spinlock.h
kernel/mm/: CMakeLists.txt  heap.c  heap.h  init.h
kernel/mm/bootmem/: boot_allot.c  boot_allot.h  linear_map.c  linear_map.h
kernel/mm/pmm/: buddy.c  buddy.h  pmm.h  pmm_types.h
kernel/mm/vmm/: vmm_types.h
kernel/task/: task_types.h
